<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.zendodx</groupId>
    <artifactId>evalkit-bom</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>evalkit-bom</name>
    <description>evalkit project bom</description>
    <url>https://github.com/zendodx/evalkit.git</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>zendodx</name>
            <email>zendodx@hotmail.com</email>
            <roles>
                <role>Project Manager</role>
                <role>Architect</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>https://github.com/zendodx/evalkit-framework.git</connection>
        <developerConnection>scm:git@github.com:zendodx/evalkit-framework.git</developerConnection>
        <url>https://github.com/zendodx/evalkit-framework</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>evalkit-parent</module>
        <module>evalkit-common</module>
        <module>evalkit-workflow</module>
        <module>evalkit-infra</module>
        <module>evalkit-eval</module>
        <module>evalkit-test</module>
    </modules>

    <properties>
        <!-- 项目版本 -->
        <revision>1.2.5</revision>
        <!-- 统一编码 -->
        <encoding>UTF-8</encoding>
        <!-- jdk版本 -->
        <jdk.version>1.8</jdk.version>
        <!-- mvn -->
        <maven.compiler.source>${jdk.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>
        <!-- 工程编码 -->
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <project.build.resourceEncoding>${encoding}</project.build.resourceEncoding>
        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
        <!--插件版本-->
        <central-publishing-maven-plugin.version>0.4.0</central-publishing-maven-plugin.version>
        <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
        <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 公共模块 -->
            <dependency>
                <groupId>io.github.zendodx</groupId>
                <artifactId>evalkit-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- 工作流模块 -->
            <dependency>
                <groupId>io.github.zendodx</groupId>
                <artifactId>evalkit-workflow</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- 基础模块 -->
            <dependency>
                <groupId>io.github.zendodx</groupId>
                <artifactId>evalkit-infra</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- 评测模块 -->
            <dependency>
                <groupId>io.github.zendodx</groupId>
                <artifactId>evalkit-eval</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- central发布插件 -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central-publishing-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>zendodx</publishingServerId>
                    <tokenAuth>true</tokenAuth>
                </configuration>
            </plugin>
            <!-- gpg插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <configuration>
                    <executable>${gpg.executable.path}</executable>
                    <keyname>zendodx</keyname>
                </configuration>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- 单元测试执行器插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <!-- 包含单元测试 -->
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <!-- 排除单元测试 -->
                    <excludes>
                        <!-- TODO 耗时长排除,手动测试 -->
                        <exclude>DeltaEvalFacadeTest</exclude>
                        <exclude>OrderedDeltaEvalFacadeTest</exclude>
                        <exclude>OrderedDeltaEvalWithinDataInjectTest</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!-- 在发布（deploy/install）前自动将变量展开为实际值 -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <pomElements>
                        <name/>
                        <description/>
                        <url/>
                        <inceptionYear/>
                        <organization/>
                        <contributors/>
                        <mailingLists/>
                        <scm/>
                        <developers/>
                    </pomElements>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>